--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,11 @@ android {
 }
 
 dependencies {
+
+//    --- amplify ---
+    implementation 'com.amplifyframework:core:1.4.1'
+    implementation 'com.amplifyframework:aws-api:1.4.1'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
