cognito initialized, added SignUp Activity

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -16,5 +16,13 @@
         }
       }
     }
+  },
+  "auth": {
+    "taskmaster0c7ee3af": {
+      "service": "Cognito",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "customAuth": false
+    }
   }
 }
