--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,10 @@ dependencies {
     implementation "androidx.room:room-rxjava2:$room_version"
     implementation "androidx.room:room-guava:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
+
+
+//    --- Cognito ---
+    implementation 'com.amplifyframework:aws-auth-cognito:1.4.1'
+
+
 }
