--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".SettingsActivity" />
         <activity android:name=".TaskDetail" />
         <activity android:name=".AllTasks" />
         <activity android:name=".AddTask" />
